Changed the edit button

--- a/app/front/manager/reservation_management.html
+++ b/app/front/manager/reservation_management.html
@@ -161,7 +161,7 @@
                       class="inline-flex items-center rounded-full bg-green-100 dark:bg-green-900/40 px-2.5 py-0.5 font-medium text-green-800 dark:text-green-300">Confirmed</span>
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
-                    <a class="text-primary hover:underline" href="/manager/edit_reservations">Edit</a>
+                   <a class="inline-flex items-center rounded-full bg-primary/20 px-3 py-1 text-sm font-medium text-primary hover:bg-primary/30" href="/manager/edit_reservations">Edit</a>
                     <a class="ml-4 text-red-600 dark:text-red-500 hover:underline"
                       href="/manager/cancel_reservations">Cancel</a>
                   </td>
@@ -177,7 +177,7 @@
                       class="inline-flex items-center rounded-full bg-green-100 dark:bg-green-900/40 px-2.5 py-0.5 font-medium text-green-800 dark:text-green-300">Confirmed</span>
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
-                    <a class="text-primary hover:underline" href="/manager/edit_reservations">Edit</a>
+                    <a class="inline-flex items-center rounded-full bg-primary/20 px-3 py-1 text-sm font-medium text-primary hover:bg-primary/30" href="/manager/edit_reservations">Edit</a>
                     <a class="ml-4 text-red-600 dark:text-red-500 hover:underline"
                       href="/manager/cancel_reservations">Cancel</a>
                   </td>
@@ -193,7 +193,7 @@
                       class="inline-flex items-center rounded-full bg-blue-100 dark:bg-blue-900/40 px-2.5 py-0.5 font-medium text-blue-800 dark:text-blue-300">Seated</span>
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
-                    <a class="text-primary hover:underline" href="/manager/edit_reservations">Edit</a>
+                    <a class="inline-flex items-center rounded-full bg-primary/20 px-3 py-1 text-sm font-medium text-primary hover:bg-primary/30" href="/manager/edit_reservations">Edit</a>
                     <a class="ml-4 text-red-600 dark:text-red-500 hover:underline"
                       href="/manager/cancel_reservations">Cancel</a>
                   </td>
@@ -209,7 +209,7 @@
                       class="inline-flex items-center rounded-full bg-gray-100 dark:bg-gray-700 px-2.5 py-0.5 font-medium text-gray-800 dark:text-gray-300">Completed</span>
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
-                    <a class="text-primary hover:underline" href="#" data-not-implemented>Details</a>
+                    <a class="inline-flex items-center rounded-full bg-primary/20 px-3 py-1 text-sm font-medium text-primary hover:bg-primary/30" href="#" data-not-implemented>Details</a>
                   </td>
                 </tr>
               </tbody>
