Correct some errors in the script tag

--- a/app/front/staff/check.html
+++ b/app/front/staff/check.html
@@ -595,7 +595,7 @@
       localStorage.setItem('staffStatus', 'checkin');
     }
   </script>
-  <script src="../js/functions.js">  <script src="../js/functions.js"></script>
+  <script src="../js/functions.js"> </script>
 </body>
 
 </html>
