--- a/app/front/staff/checkout.html
+++ b/app/front/staff/checkout.html
@@ -592,7 +592,7 @@
             localStorage.setItem('staffStatus', 'checkout');
         }
     </script>
-  <script src="../js/functions.js">  <script src="../js/functions.js"></script>
+  <script src="../js/functions.js"></script>
 </body>
 
 </html>
