--- a/app/front/staff/today_task.html
+++ b/app/front/staff/today_task.html
@@ -634,7 +634,7 @@
       }
     })();
   </script>
-  <script src="../js/functions.js">  <script src="../js/functions.js"></script>
+  <script src="../js/functions.js"></script>
 </body>
 
 </html>
