--- a/app/front/staff/pizza1.html
+++ b/app/front/staff/pizza1.html
@@ -262,7 +262,7 @@
     </div>
   </div>
 
-  <script src="../js/functions.js">  <script src="../js/functions.js"></script>
+  <script src="../js/functions.js"></script>
 </body>
 
 </html>
