--- a/app/front/staff/pizza3.html
+++ b/app/front/staff/pizza3.html
@@ -518,7 +518,7 @@
       }
     })();
   </script>
-  <script src="../js/functions.js">  <script src="../js/functions.js"></script>
+  <script src="../js/functions.js"></script>
 </body>
 
 </html>
