Partial translation of some pages of customer.

--- a/app/front/customer/delivery_order_confirmation.html
+++ b/app/front/customer/delivery_order_confirmation.html
@@ -102,8 +102,8 @@
           class="flex size-16 items-center justify-center rounded-full bg-green-100 dark:bg-green-900/50 text-green-600 dark:text-green-400">
           <span class="material-symbols-outlined text-4xl">check_circle</span>
         </div>
-        <h1 class="text-[#1c180d] dark:text-white tracking-tight text-3xl font-bold text-center">Order Confirmed</h1>
-        <p class="text-gray-500 dark:text-gray-400">A new order for home delivery has been received.</p>
+        <h1 class="text-[#1c180d] dark:text-white tracking-tight text-3xl font-bold text-center">Pedido Confirmado</h1>
+        <p class="text-gray-500 dark:text-gray-400">Se ha recibido un nuevo pedido para entrega a domicilio.</p>
       </div>
       <div class="p-6 sm:p-8">
         <div class="flex flex-col gap-6">
@@ -111,17 +111,17 @@
             class="flex flex-col items-stretch justify-start rounded-xl border border-gray-200 dark:border-zinc-800 bg-background-light dark:bg-background-dark p-4 sm:p-6">
             <div class="flex w-full min-w-72 grow flex-col items-stretch justify-center gap-3">
               <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-2">
-                <p class="text-[#1c180d] dark:text-white text-lg font-bold leading-tight">Delivery Details</p>
+                <p class="text-[#1c180d] dark:text-white text-lg font-bold leading-tight">Detalles de Entrega</p>
                 <p class="text-sm font-medium text-[#9e8747] dark:text-primary/80">#CD-12945</p>
               </div>
               <div class="flex flex-col gap-1 text-gray-600 dark:text-gray-300">
-                <p><span class="font-semibold text-[#1c180d] dark:text-white">Customer:</span> Jane Doe</p>
-                <p><span class="font-semibold text-[#1c180d] dark:text-white">Address:</span> 123 Cheese Lane, Gouda, CA
+                <p><span class="font-semibold text-[#1c180d] dark:text-white">Cliente:</span> Jane Doe</p>
+                <p><span class="font-semibold text-[#1c180d] dark:text-white">Dirección:</span> 123 Cheese Lane, Gouda, CA
                   90210</p>
-                <p><span class="font-semibold text-[#1c180d] dark:text-white">Phone:</span> (555) 867-5309</p>
+                <p><span class="font-semibold text-[#1c180d] dark:text-white">Teléfono:</span> (555) 867-5309</p>
               </div>
               <a class="text-orange-500 dark:text-orange-400 text-sm font-semibold hover:underline focus:underline focus:outline-none"
-                href="#">View on Map</a>
+                href="#">Ver en el Mapa</a>
             </div>
           </div>
           <div class="flex flex-col gap-4">
@@ -129,31 +129,31 @@
               <div class="text-[#1c180d] dark:text-primary flex items-center justify-center shrink-0 size-10">
                 <span class="material-symbols-outlined text-3xl">schedule</span>
               </div>
-              <p class="text-[#1c180d] dark:text-white text-base font-normal leading-normal flex-1 truncate">Estimated
-                Delivery: 6:30 PM - 6:45 PM</p>
+              <p class="text-[#1c180d] dark:text-white text-base font-normal leading-normal flex-1 truncate">Entrega
+                Estimada: 6:30 PM - 6:45 PM</p>
             </div>
             <div class="flex items-center gap-4 rounded-lg bg-gray-100 dark:bg-zinc-800 p-4">
               <div class="text-[#1c180d] dark:text-primary flex items-center justify-center shrink-0 size-10">
                 <span class="material-symbols-outlined text-3xl">receipt_long</span>
               </div>
-              <p class="text-[#1c180d] dark:text-white text-base font-normal leading-normal flex-1 truncate">Status:
-                <span class="font-bold text-green-600 dark:text-green-400">Confirmed</span>
+              <p class="text-[#1c180d] dark:text-white text-base font-normal leading-normal flex-1 truncate">Estado:
+                <span class="font-bold text-green-600 dark:text-green-400">Confirmado</span>
               </p>
             </div>
           </div>
           <div class="flex flex-col">
             <details class="flex flex-col border-t border-t-gray-200 dark:border-t-zinc-800 group">
               <summary class="flex cursor-pointer list-none items-center justify-between gap-6 py-4">
-                <p class="text-[#1c180d] dark:text-white text-base font-medium leading-normal">View Itemized List (3
-                  items)</p>
+                <p class="text-[#1c180d] dark:text-white text-base font-medium leading-normal">Ver Lista Detallada (3
+                  artículos)</p>
                 <div class="text-[#1c180d] dark:text-white group-open:rotate-180 transition-transform">
                   <span class="material-symbols-outlined">expand_more</span>
                 </div>
               </summary>
               <div class="flex flex-col gap-2 pb-2 text-gray-600 dark:text-gray-400 text-sm">
-                <div class="flex justify-between"><span>Margherita Pizza (x1)</span><span>$15.00</span></div>
-                <div class="flex justify-between"><span>Cheesy Garlic Bread (x2)</span><span>$12.00</span></div>
-                <div class="flex justify-between"><span>Soda (x1)</span><span>$3.00</span></div>
+                <div class="flex justify-between"><span>Pizza Margarita (x1)</span><span>$15.00</span></div>
+                <div class="flex justify-between"><span>Pan de Ajo con Queso (x2)</span><span>$12.00</span></div>
+                <div class="flex justify-between"><span>Refresco (x1)</span><span>$3.00</span></div>
                 <div
                   class="flex justify-between font-bold text-[#1c180d] dark:text-white pt-2 border-t border-dashed border-gray-300 dark:border-zinc-700">
                   <span>Total</span><span>$30.00</span>
@@ -168,11 +168,11 @@
         <div class="flex flex-col sm:flex-row flex-1 gap-3 justify-center">
           <button
             class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-12 px-5 bg-primary text-[#1c180d] text-base font-bold leading-normal tracking-[0.015em] grow focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2 dark:focus:ring-offset-zinc-900">
-            <span class="truncate">Print Receipt</span>
+            <span class="truncate">Imprimir Recibo</span>
           </button>
           <button
             class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-12 px-5 bg-[#f4f0e6] dark:bg-zinc-800 text-[#1c180d] dark:text-white text-base font-bold leading-normal tracking-[0.015em] grow focus:outline-none focus:ring-2 focus:ring-primary/50 focus:ring-offset-2 dark:focus:ring-offset-zinc-900">
-            <span class="truncate">Back to Dashboard</span>
+            <span class="truncate">Volver al Panel</span>
           </button>
         </div>
       </div>
