--- a/app/front/customer/reservation_confirmation.html
+++ b/app/front/customer/reservation_confirmation.html
@@ -152,10 +152,8 @@
               <span class="material-symbols-outlined !text-5xl">check_circle</span>
             </div>
             <div class="flex flex-col gap-3">
-              <p class="text-4xl font-black leading-tight tracking-[-0.033em] text-black dark:text-white">Your
-                Reservation is Confirmed!</p>
-              <p class="text-base font-normal leading-normal text-black/60 dark:text-white/60">Thank you, Alex. We've
-                sent a confirmation email to alex.doe@email.com.</p>
+              <p class="text-4xl font-black leading-tight tracking-[-0.033em] text-black dark:text-white">¡Tu Reserva está Confirmada!</p>
+              <p class="text-base font-normal leading-normal text-black/60 dark:text-white/60">Gracias, Alex. Hemos recibido tu reserva.</p>
             </div>
           </div>
           <div
@@ -203,7 +201,7 @@
             <button data-not-implemented
               class="flex w-full sm:w-auto min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 bg-transparent text-black dark:text-white hover:bg-black/5 dark:hover:bg-white/5 text-base font-bold leading-normal tracking-[0.015em] grow sm:grow-0 gap-2">
               <span class="material-symbols-outlined" data-icon="calendar_add_on">calendar_add_on</span>
-              <span class="truncate">Add to Calendar</span>
+              <span class="truncate">Agregar al Calendario</span>
             </button>
           </div>
         </div>
